--- a/HDR-Bug-Repro/Info.plist
+++ b/HDR-Bug-Repro/Info.plist
@@ -62,5 +62,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app exports videos to test various settings on iPhone 12 Pro</string>
 </dict>
 </plist>
